k8s deploymentserviceingress.yml reviewed

--- a/index.html
+++ b/index.html
@@ -25,17 +25,17 @@
       <!-- Logo -->
       <nav class="container-fluid">
         <div class="logo">
-          <a href="#"><i class="fa fa-globe"></i></a>
+          <a href="#"><em class="fa fa-globe"></em></a>
         </div>
 
         <!--Hamburger-->
         <div class="hamburger d-lg-none">
-          <i class="fa fa-bars"></i>
+          <em class="fa fa-bars"></em>
         </div>
 
         <!-- Nav-bar -->
         <ul class="navigation-menu">
-          <i class="fas fa-times close d-lg-none"></i>
+          <em class="fas fa-times close d-lg-none"></em>
           <li><a href="#">Accueil</a></li>
           <li><a href="#services">Nos Services</a></li>
           <li><a href="#destinations">Destinations</a></li>
@@ -47,9 +47,9 @@
       <h1 class="mt-5 mt-lg-0 pt-3 py-3 py-lg-0">Rejoignez-nous et passez des vacances de rêves sur des lieux paradisiaques</h1>
     </div>
     <div class="sub-heading mt-4 mt-lg-0">
-      <a href="#"><i class="fas fa-shopping-cart" aria-hidden="true"></i> shopping</a>
-      <a href="#"><i class="fa fa-coffee"></i> restaurants</a>
-      <a href="#"><i class="fa fa-hotel"></i> hotels</a>
+      <a href="#"><em class="fas fa-shopping-cart" aria-hidden="true"></em> shopping</a>
+      <a href="#"><em class="fa fa-coffee"></em> restaurants</a>
+      <a href="#"><em class="fa fa-hotel"></em> hotels</a>
     </div>
     
     <div class="next">
@@ -105,7 +105,7 @@
               <div class="card-body">
                 <h3 class="card-title">BOSTWANA</h3>
                 <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Earum quam consequatur eaque cupiditate qui voluptas quibusdam eveniet ut necessitatibus voluptatem sint fugit temporibus id, quis ratione facilis modi odio adipisci.</p>
-                <a href="#" class="btn btn-outline-primary mt-4">Voir plus <i class="fas fa-arrow-right"></i></a>
+                <a href="#" class="btn btn-outline-primary mt-4">Voir plus <em class="fas fa-arrow-right"></em></a>
               </div>
             </div>
           </div>
@@ -115,7 +115,7 @@
               <div class="card-body">
                 <h3 class="card-title">MAROC</h3>
                 <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Earum quam consequatur eaque cupiditate qui voluptas quibusdam eveniet ut necessitatibus voluptatem sint fugit temporibus id, quis ratione facilis modi odio adipisci.</p>
-                <a href="#" class="btn btn-outline-primary mt-4">Voir plus <i class="fas fa-arrow-right"></i></a>
+                <a href="#" class="btn btn-outline-primary mt-4">Voir plus <em class="fas fa-arrow-right"></em></a>
               </div>
             </div>
           </div>
@@ -125,7 +125,7 @@
               <div class="card-body">
                 <h3 class="card-title">ALGERIE</h3>
                 <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Earum quam consequatur eaque cupiditate qui voluptas quibusdam eveniet ut necessitatibus voluptatem sint fugit temporibus id, quis ratione facilis modi odio adipisci.</p>
-                <a href="#" class="btn btn-outline-primary mt-4">Voir plus <i class="fas fa-arrow-right"></i></a>
+                <a href="#" class="btn btn-outline-primary mt-4">Voir plus <em class="fas fa-arrow-right"></em></a>
               </div>
             </div>
           </div>
@@ -135,7 +135,7 @@
               <div class="card-body">
                 <h3 class="card-title">CAMEROUN</h3>
                 <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Earum quam consequatur eaque cupiditate qui voluptas quibusdam eveniet ut necessitatibus voluptatem sint fugit temporibus id, quis ratione facilis modi odio adipisci.</p>
-                <a href="#" class="btn btn-outline-primary mt-4">Voir plus <i class="fas fa-arrow-right"></i></a>
+                <a href="#" class="btn btn-outline-primary mt-4">Voir plus <em class="fas fa-arrow-right"></em></a>
               </div>
             </div>
           </div>
@@ -145,7 +145,7 @@
               <div class="card-body">
                 <h3 class="card-title">RWANDA</h3>
                 <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Earum quam consequatur eaque cupiditate qui voluptas quibusdam eveniet ut necessitatibus voluptatem sint fugit temporibus id, quis ratione facilis modi odio adipisci.</p>
-                <a href="#" class="btn btn-outline-primary mt-4">Voir plus <i class="fas fa-arrow-right"></i></a>
+                <a href="#" class="btn btn-outline-primary mt-4">Voir plus <em class="fas fa-arrow-right"></em></a>
               </div>
             </div>
           </div>
@@ -155,7 +155,7 @@
               <div class="card-body">
                 <h3 class="card-title">EGYPTE</h3>
                 <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Earum quam consequatur eaque cupiditate qui voluptas quibusdam eveniet ut necessitatibus voluptatem sint fugit temporibus id, quis ratione facilis modi odio adipisci.</p>
-                <a href="#" class="btn btn-outline-primary mt-4">Voir plus <i class="fas fa-arrow-right"></i></a>
+                <a href="#" class="btn btn-outline-primary mt-4">Voir plus <em class="fas fa-arrow-right"></em></a>
               </div>
             </div>
           </div>
@@ -165,7 +165,7 @@
               <div class="card-body">
                 <h3 class="card-title">BENIN</h3>
                 <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Earum quam consequatur eaque cupiditate qui voluptas quibusdam eveniet ut necessitatibus voluptatem sint fugit temporibus id, quis ratione facilis modi odio adipisci.</p>
-                <a href="#" class="btn btn-outline-primary mt-4">Voir plus <i class="fas fa-arrow-right"></i></a>
+                <a href="#" class="btn btn-outline-primary mt-4">Voir plus <em class="fas fa-arrow-right"></em></a>
               </div>
             </div>
           </div>
@@ -175,7 +175,7 @@
               <div class="card-body">
                 <h3 class="card-title">TCHAD</h3>
                 <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Earum quam consequatur eaque cupiditate qui voluptas quibusdam eveniet ut necessitatibus voluptatem sint fugit temporibus id, quis ratione facilis modi odio adipisci.</p>
-                <a href="#" class="btn btn-outline-primary mt-4">Voir plus <i class="fas fa-arrow-right"></i></a>
+                <a href="#" class="btn btn-outline-primary mt-4">Voir plus <em class="fas fa-arrow-right"></em></a>
               </div>
             </div>
           </div>
@@ -197,7 +197,7 @@
             <input type="email" name="email" placeholder="votre e-mail" required class="mb-3 mb-lg-5 ms-lg-2">
             <label for="reasons" class="pt-lg-2">Raisons :</label>
             <input type="reasons" name="reasons" placeholder="vos raisons" required class="mt-2 mb-3 mt-lg-0 mb-lg-5 ms-lg-2">
-						<button type="submit" class="btn btn-outline-primary mt-4 mb-3 ms-0 ms-lg-4  mt-lg-0 mb-lg-5"><i class="fab fa-telegram-plane"></i> &nbsp;Envoyer</button>
+						<button type="submit" class="btn btn-outline-primary mt-4 mb-3 ms-0 ms-lg-4  mt-lg-0 mb-lg-5"><em class="fab fa-telegram-plane"></em> &nbsp;Envoyer</button>
           </form>
         </div>
       </div>
@@ -210,10 +210,10 @@
           <p>Suivez nous sur nos plateformes digitales et restez à l'affût de nos dernières nouveautés</p>
         </div>
         <div class="icons mb-lg-5 mb-md-5 mb-5">
-          <i class="fab fa-facebook facebook"></i>
-          <i class="fab fa-twitter twitter"></i>
-          <i class="fab fa-instagram instagram"></i>
-          <i class="fab fa-youtube youtube"></i>
+          <em class="fab fa-facebook facebook"></em>
+          <em class="fab fa-twitter twitter"></em>
+          <em class="fab fa-instagram instagram"></em>
+          <em class="fab fa-youtube youtube"></em>
         </div>
       </div>
     </section>
@@ -237,9 +237,9 @@
             <h4>Contact</h4>
             <hr>
             <ul class="d-flex flex-column gap-2">
-              <li class="d-flex gap-3 align-items-center"><a><i class="fa fa-phone-alt"></i>&nbsp;+237 6 83 50 13 89</a></li>
-              <li class="d-flex gap-3 align-items-center"><a><i class="fa fa-envelope"></i>&nbsp;AfricaTrip@gmail.com</a></li>
-              <li class="d-flex gap-3 align-items-center"><a><i class="fas fa-map-marker-alt"></i>&nbsp;Yassa, près de BOCOM Bilongue</a></li>
+              <li class="d-flex gap-3 align-items-center"><a><em class="fa fa-phone-alt"></em>&nbsp;+237 6 83 50 13 89</a></li>
+              <li class="d-flex gap-3 align-items-center"><a><em class="fa fa-envelope"></em>&nbsp;&nbsp;AfricaTrip@gmail.com</a></li>
+              <li class="d-flex gap-3 align-items-center"><a><em class="fas fa-map-marker-alt"></em>&nbsp;&nbsp;&nbsp;Yassa, près de BOCOM Bilongue</a></li>
             </ul>
           </div>
           <div class="col-12 col-md-4 mb-5 mb-md-0">
