--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
         <div class="row gy-5 gx-4">
           <div class="col-12 col-sm-6 col-md-4 col-lg-3">
             <div class="card mb-0">
-              <img class="card-img-top" src="" alt="Card image flag">
+              <img class="card-img-top" src="/img/flag 2.png" alt="Card image flag">
               <div class="card-body">
                 <h3 class="card-title">BOSTWANA</h3>
                 <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Earum quam consequatur eaque cupiditate qui voluptas quibusdam eveniet ut necessitatibus voluptatem sint fugit temporibus id, quis ratione facilis modi odio adipisci.</p>
@@ -111,7 +111,7 @@
           </div>
           <div class="col-12 col-sm-6 col-md-4 col-lg-3">
             <div class="card mb-0">
-              <img class="card-img-top" src="" alt="Card image flag">
+              <img class="card-img-top" src="/img/flag 3.png" alt="Card image flag">
               <div class="card-body">
                 <h3 class="card-title">MAROC</h3>
                 <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Earum quam consequatur eaque cupiditate qui voluptas quibusdam eveniet ut necessitatibus voluptatem sint fugit temporibus id, quis ratione facilis modi odio adipisci.</p>
@@ -121,7 +121,7 @@
           </div>
           <div class="col-12 col-sm-6 col-md-4 col-lg-3">
             <div class="card mb-0">
-              <img class="card-img-top" src="" alt="Card image flag">
+              <img class="card-img-top" src="/img/flag 4.png" alt="Card image flag">
               <div class="card-body">
                 <h3 class="card-title">ALGERIE</h3>
                 <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Earum quam consequatur eaque cupiditate qui voluptas quibusdam eveniet ut necessitatibus voluptatem sint fugit temporibus id, quis ratione facilis modi odio adipisci.</p>
@@ -131,7 +131,7 @@
           </div>
           <div class="col-12 col-sm-6 col-md-4 col-lg-3">
             <div class="card mb-0">
-              <img class="card-img-top" src="" alt="Card image flag">
+              <img class="card-img-top" src="img/flag 1.png" alt="Card image flag">
               <div class="card-body">
                 <h3 class="card-title">CAMEROUN</h3>
                 <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Earum quam consequatur eaque cupiditate qui voluptas quibusdam eveniet ut necessitatibus voluptatem sint fugit temporibus id, quis ratione facilis modi odio adipisci.</p>
@@ -141,7 +141,7 @@
           </div>
           <div class="col-12 col-sm-6 col-md-4 col-lg-3">
             <div class="card mb-0">
-              <img class="card-img-top" src="" alt="Card image flag">
+              <img class="card-img-top" src="/img/flag 5.png" alt="Card image flag">
               <div class="card-body">
                 <h3 class="card-title">RWANDA</h3>
                 <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Earum quam consequatur eaque cupiditate qui voluptas quibusdam eveniet ut necessitatibus voluptatem sint fugit temporibus id, quis ratione facilis modi odio adipisci.</p>
@@ -151,7 +151,7 @@
           </div>
           <div class="col-12 col-sm-6 col-md-4 col-lg-3">
             <div class="card mb-0">
-              <img class="card-img-top" src="" alt="Card image flag">
+              <img class="card-img-top" src="/img/flag 7.png" alt="Card image flag">
               <div class="card-body">
                 <h3 class="card-title">EGYPTE</h3>
                 <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Earum quam consequatur eaque cupiditate qui voluptas quibusdam eveniet ut necessitatibus voluptatem sint fugit temporibus id, quis ratione facilis modi odio adipisci.</p>
@@ -161,7 +161,7 @@
           </div>
           <div class="col-12 col-sm-6 col-md-4 col-lg-3">
             <div class="card mb-0">
-              <img class="card-img-top" src="" alt="Card image flag">
+              <img class="card-img-top" src="/img/flag 6.png" alt="Card image flag">
               <div class="card-body">
                 <h3 class="card-title">BENIN</h3>
                 <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Earum quam consequatur eaque cupiditate qui voluptas quibusdam eveniet ut necessitatibus voluptatem sint fugit temporibus id, quis ratione facilis modi odio adipisci.</p>
@@ -171,7 +171,7 @@
           </div>
           <div class="col-12 col-sm-6 col-md-4 col-lg-3">
             <div class="card mb-5">
-              <img class="card-img-top" src="" alt="Card image flag">
+              <img class="card-img-top" src="/img/flag 8.png" alt="Card image flag">
               <div class="card-body">
                 <h3 class="card-title">TCHAD</h3>
                 <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Earum quam consequatur eaque cupiditate qui voluptas quibusdam eveniet ut necessitatibus voluptatem sint fugit temporibus id, quis ratione facilis modi odio adipisci.</p>
@@ -187,7 +187,7 @@
       <div class="container">
         <div class="heading text-center">
           <h2 class="text-uppercase text-muted mt-lg-3 mt-md-3 mb-lg-4 mb-md-4">Contactez-nous</h2>
-          <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Temporibus, tempora doloribus veritatis pariatur numquam impedit modi tenetur minus qui aut quam recusandae saepe quae! Est sed ullam ipsa provident autem tenetur porro quisquam, corrupti, modi non magni vitae. Ipsam, nemo cum blanditiis nostrum neque natus accusamus praesentium voluptatum. Obcaecati temporibus sapiente illum harum aut ad fuga maxime facilis voluptatum nesciunt hic veniam perspiciatis incidunt modi eius iste ipsa, est cupiditate blanditiis provident sunt perferendis optio aspernatur iure? Commodi minus nihil quas ab quae, ullam non dolorum dicta placeat animi deserunt velit recusandae nam nisi libero sint natus, hic ducimus tempora!</p>
+          <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Temporibus, tempora doloribus veritatis pariatur numquam impedit modi tenetur minus qui aut quam recusandae saepe quae! Est sed ullam ipsa provident autem tenetur porro quisquam, corrupti, modi non magni vitae. Ipsam, nemo cum blanditiis nostrum neque natus accusamus praesentium voluptatum. Obcaecati temporibus sapiente illum harum aut ad fuga maxime facilis voluptatum nesciunt hic veniam perspiciatis incidunt modi eius iste ipsa, est cupiditate blanditiis provident sunt perferendis optio aspernatur iure?</p>
         </div>
         <div class="form mt-lg-5 mb-lg-0">
           <form class="d-flex flex-lg-row flex-column ps-lg-5">
@@ -206,7 +206,7 @@
     <section id="about-us">
       <div class="container">
         <div class="heading text-center">
-          <h2 class="text-uppercase text-muted mt-5 mt-lg-4 mt-md-5 mb-lg-3 mb-md-3">A propos de nous</h2>
+          <h2 class="text-uppercase text-muted mt-5 mt-lg-3 mt-md-5 mb-lg-3 mb-md-3">A propos de nous</h2>
           <p>Suivez nous sur nos plateformes digitales et restez à l'affût de nos dernières nouveautés</p>
         </div>
         <div class="icons mb-lg-5 mb-md-5 mb-5">
