add jest and index.test.js file

--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
         <div class="row gy-5 gx-4">
           <div class="col-12 col-sm-6 col-md-4 col-lg-3">
             <div class="card mb-0">
-              <img class="card-img-top" src="/img/flag 2.png" alt="Card image flag">
+              <img class="card-img-top" src="img/flag 2.png" alt="Card image flag">
               <div class="card-body">
                 <h3 class="card-title">BOSTWANA</h3>
                 <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Earum quam consequatur eaque cupiditate qui voluptas quibusdam eveniet ut necessitatibus voluptatem sint fugit temporibus id, quis ratione facilis modi odio adipisci.</p>
@@ -111,7 +111,7 @@
           </div>
           <div class="col-12 col-sm-6 col-md-4 col-lg-3">
             <div class="card mb-0">
-              <img class="card-img-top" src="/img/flag 3.png" alt="Card image flag">
+              <img class="card-img-top" src="img/flag 3.png" alt="Card image flag">
               <div class="card-body">
                 <h3 class="card-title">MAROC</h3>
                 <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Earum quam consequatur eaque cupiditate qui voluptas quibusdam eveniet ut necessitatibus voluptatem sint fugit temporibus id, quis ratione facilis modi odio adipisci.</p>
@@ -121,7 +121,7 @@
           </div>
           <div class="col-12 col-sm-6 col-md-4 col-lg-3">
             <div class="card mb-0">
-              <img class="card-img-top" src="/img/flag 4.png" alt="Card image flag">
+              <img class="card-img-top" src="img/flag 4.png" alt="Card image flag">
               <div class="card-body">
                 <h3 class="card-title">ALGERIE</h3>
                 <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Earum quam consequatur eaque cupiditate qui voluptas quibusdam eveniet ut necessitatibus voluptatem sint fugit temporibus id, quis ratione facilis modi odio adipisci.</p>
@@ -141,7 +141,7 @@
           </div>
           <div class="col-12 col-sm-6 col-md-4 col-lg-3">
             <div class="card mb-0">
-              <img class="card-img-top" src="/img/flag 5.png" alt="Card image flag">
+              <img class="card-img-top" src="img/flag 5.png" alt="Card image flag">
               <div class="card-body">
                 <h3 class="card-title">RWANDA</h3>
                 <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Earum quam consequatur eaque cupiditate qui voluptas quibusdam eveniet ut necessitatibus voluptatem sint fugit temporibus id, quis ratione facilis modi odio adipisci.</p>
@@ -151,7 +151,7 @@
           </div>
           <div class="col-12 col-sm-6 col-md-4 col-lg-3">
             <div class="card mb-0">
-              <img class="card-img-top" src="/img/flag 7.png" alt="Card image flag">
+              <img class="card-img-top" src="img/flag 7.png" alt="Card image flag">
               <div class="card-body">
                 <h3 class="card-title">EGYPTE</h3>
                 <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Earum quam consequatur eaque cupiditate qui voluptas quibusdam eveniet ut necessitatibus voluptatem sint fugit temporibus id, quis ratione facilis modi odio adipisci.</p>
@@ -161,7 +161,7 @@
           </div>
           <div class="col-12 col-sm-6 col-md-4 col-lg-3">
             <div class="card mb-0">
-              <img class="card-img-top" src="/img/flag 6.png" alt="Card image flag">
+              <img class="card-img-top" src="img/flag 6.png" alt="Card image flag">
               <div class="card-body">
                 <h3 class="card-title">BENIN</h3>
                 <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Earum quam consequatur eaque cupiditate qui voluptas quibusdam eveniet ut necessitatibus voluptatem sint fugit temporibus id, quis ratione facilis modi odio adipisci.</p>
@@ -171,7 +171,7 @@
           </div>
           <div class="col-12 col-sm-6 col-md-4 col-lg-3">
             <div class="card mb-5">
-              <img class="card-img-top" src="/img/flag 8.png" alt="Card image flag">
+              <img class="card-img-top" src="img/flag 8.png" alt="Card image flag">
               <div class="card-body">
                 <h3 class="card-title">TCHAD</h3>
                 <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Earum quam consequatur eaque cupiditate qui voluptas quibusdam eveniet ut necessitatibus voluptatem sint fugit temporibus id, quis ratione facilis modi odio adipisci.</p>
@@ -272,7 +272,7 @@
     
   <script defer src="./vendors/jquery/jquery-3.3.1.min.js"></script>
   <script defer src="./vendors/bootstrap/js/bootstrap.bundle.min.js"></script>
-  <script defer src="./js/script.js"></script>
+  <script defer src="./js/index.js"></script>
 </body>
  
 </html>
