index.html, index.js and index.test.js files reviewed

--- a/index.html
+++ b/index.html
@@ -29,13 +29,13 @@
         </div>
 
         <!--Hamburger-->
-        <div class="hamburger d-lg-none">
+        <div class="hamburger d-lg-none" onclick="openMenuToogle()">
           <em class="fa fa-bars"></em>
         </div>
 
         <!-- Nav-bar -->
         <ul class="navigation-menu">
-          <em class="fas fa-times close d-lg-none"></em>
+          <em class="fas fa-times close d-lg-none" onclick="closeMenuToogle()"></em>
           <li><a href="#">Accueil</a></li>
           <li><a href="#services">Nos Services</a></li>
           <li><a href="#destinations">Destinations</a></li>
