--- a/index.html
+++ b/index.html
@@ -17,11 +17,21 @@
 	<link rel="stylesheet" type="text/css" href="./css/responsive.css">
   <!-- bootstrap -->
   <link rel="stylesheet" href="./vendors/bootstrap/css/bootstrap.min.css">
+  <!-- Google analytics -->
+  <!-- Global site tag (gtag.js) - Google Analytics -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-62CE0VDJC9"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+
+    gtag('config', 'G-62CE0VDJC9');
+  </script>
 </head>		
     
 <body>
     
-    <header>
+  <header>
       <!-- Logo -->
       <nav class="container-fluid">
         <div class="logo">
