--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
       <!-- Logo -->
       <nav class="container-fluid">
         <div class="logo">
-          <a href="#"><em class="fa fa-globe"></em></a>
+          <a href="#"><img src="./img/logo.png"></a>
         </div>
 
         <!--Hamburger-->
@@ -279,9 +279,10 @@
     </div>
   </footer>
     
-  <script defer src="./vendors/jquery/jquery-3.3.1.min.js"></script>
-  <script defer src="./vendors/bootstrap/js/bootstrap.bundle.min.js"></script>
-  <script defer src="./js/index.js"></script>
+  <script src="./vendors/jquery/jquery-3.3.1.min.js"></script>
+  <script src="./vendors/bootstrap/js/bootstrap.bundle.min.js"></script>
+  <script src="./js/index.js"></script>
+  <script src="./js/index.test.js"></script>
 </body>
  
 </html>
