some config files reviewed

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
       <!-- Logo -->
       <nav class="container-fluid">
         <div class="logo">
-          <a href="#"><img src="./img/logo.png"></a>
+          <a href="#"><img src="./img/logo.png" alt="Loading Logo error"></a>
         </div>
 
         <!--Hamburger-->
