--- a/index.html
+++ b/index.html
@@ -18,8 +18,7 @@
   <!-- bootstrap -->
   <link rel="stylesheet" href="./vendors/bootstrap/css/bootstrap.min.css">
   <!-- Google analytics -->
-  <script src="https://www.googletagmanager.com/gtag/js?id=G-62CE0VDJC9" integrity="sha384-oqVuAfXRKap7fdgcCY5uykM6+R9GqQ8K/uxy9rx7HNQlGYl1kPzQho1wx4JwY8wC"></script>
-  <!-- <script async src="https://www.googletagmanager.com/gtag/js?id=G-62CE0VDJC9"></script> -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-62CE0VDJC9"></script>
   <script>
     window.dataLayer = window.dataLayer || [];
     function gtag(){dataLayer.push(arguments);}
