--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <meta name="description" content="">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <!-- favicon -->
-  <link rel="shortcut icon" type="image/x-icon" href="./img/logo.jpg">
+  <link rel="shortcut icon" type="image/x-icon" href="./img/logo.png">
   <!-- styles -->
   <link rel="stylesheet" type="text/css" href="./vendors/fontawesome/css/all.min.css">
 	<link rel="stylesheet" type="text/css" href="./vendors/fontawesome/css/fontawesome.min.css">
