--- a/index.html
+++ b/index.html
@@ -18,14 +18,14 @@
   <!-- bootstrap -->
   <link rel="stylesheet" href="./vendors/bootstrap/css/bootstrap.min.css">
   <!-- Google analytics -->
-  <!-- <script async src="https://www.googletagmanager.com/gtag/js?id=G-62CE0VDJC9"></script>
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-62CE0VDJC9"></script>
   <script>
     window.dataLayer = window.dataLayer || [];
     function gtag(){dataLayer.push(arguments);}
     gtag('js', new Date());
 
     gtag('config', 'G-62CE0VDJC9');
-  </script> -->
+  </script>
 </head>		
     
 <body>
